Update git ignore with latest files and folders I learned to ignore from other projects

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,10 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Ignore backups
+/Backups
+
+# Ignore WebGL builds
+/WebGL Builds
+connectwebgl.zip
